# microscopy-plugin

./: README.md  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
labs/ex07/template/: ex07.ipynb
src/microscopy_plugin/: __init__.py  functionsConvertClearScope.py  main.py  napari.yml  test.py  test2.py
src/microscopy_plugin/_tests/: test_reader.py
