[metadata]
name = microscopy-plugin

author = Vivien Gaillet
author_email = vi.gaillet@gmail.com
url = https://github.com/gaillet/microscopy-plugin
license = MPL-2.0
description = A plugin to preview microscopy aquisition on convert them to TeraStitcher
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
project_urls =
    Bug Tracker = https://github.com/gaillet/microscopy-plugin/issues
    Documentation = https://github.com/gaillet/microscopy-plugin#README.md
    Source Code = https://github.com/gaillet/microscopy-plugin
    User Support = https://github.com/gaillet/microscopy-plugin/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
microscopy-plugin = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    microscopy-plugin = microscopy_plugin:napari.yml
